[FIX] mobile layout issues FIXED OMG

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
   background-color: var(--projects-bg);
   display: flex;
   flex-direction: column;
-  height: calc(100% + 36px);
+  height: 100%;
   width: 100%;
   position: relative;
 }
